--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@
             <artifactId>hzero-starter-export</artifactId>
             <version>${hzero.starter.version}</version>
         </dependency>
+        <!--热部署-->
+        <dependency>
+            <groupId>org.springframework.boot </groupId>
+            <artifactId> spring-boot-devtools </artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <repositories>
